--- a/empirical/empirical3.tex
+++ b/empirical/empirical3.tex
@@ -174,7 +174,7 @@ Two possible explanations are that 1) firms are learning about the offers made b
 
 Given that people in the industry say that the pricing formula equalizes the savings to the discounted value of payments, the first hypothesis does not appear to be very likely. 
 
-\input{../Tables/IE7/IE7_learning_regressions.tex}
+\input{../Tables/IE7/IE7_learning_regressions(1).tex}
 
 
 In columns 1 to 3 we can see that firms when making an external offer increase their offer more if they see that the initial offers of the competitors are higher. In columns (4) to (6) we also see that the firm that made the highest initial offer increases their offer as a function of the average of the other offers but not as a function of the maximum of the other offers.
