--- a/Tables/IE7/IE7_learning_regressions.tex
+++ b/Tables/IE7/IE7_learning_regressions.tex
@@ -3,7 +3,7 @@
 \begin{tabular}{l*{7}{c}}
 \hline\hline
                     &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}&\multicolumn{1}{c}{(7)}\\
-                    &\multicolumn{1}{c}{Increase}&\multicolumn{1}{c}{Increase}&\multicolumn{1}{c}{Increase}&\multicolumn{1}{c}{Increase}&\multicolumn{1}{c}{Increase}&\multicolumn{1}{c}{Increase}&\multicolumn{1}{c}{Has External Offer}\\
+                    &\multicolumn{1}{c}{Increase}&\multicolumn{1}{c}{Increase}&\multicolumn{1}{c}{Increase}&\multicolumn{1}{c}{Increase}&\multicolumn{1}{c}{Increase}&\multicolumn{1}{c}{Increase}&\multicolumn{1}{c}{Has revised}\\
 \hline
 Avg. Gap            &       0.316\sym{***}&       0.202\sym{***}&       0.155\sym{***}&       0.139\sym{***}&       0.147\sym{***}&       0.071\sym{***}&                     \\
                     &     (0.006)         &     (0.010)         &     (0.010)         &     (0.016)         &     (0.019)         &     (0.020)         &                     \\
@@ -17,9 +17,10 @@ gap\_from\_avg        &                     &                     &             
 Constant            &       1.893\sym{***}&       1.606\sym{***}&       1.375\sym{***}&       1.381\sym{***}&       1.387\sym{***}&       1.511\sym{***}&      -2.012\sym{***}\\
                     &     (0.010)         &     (0.022)         &     (0.082)         &     (0.045)         &     (0.046)         &     (0.121)         &     (0.028)         \\
 \hline
-Sample              & Not highest         & Not highest         & Not highest         &     Highest         &     Highest         &     Highest         &         All         \\
+Sample              &          NH         &          NH         &          NH         &           H         &           H         &           H         &         All         \\
 Firm FE             &          No         &          No         &         Yes         &          No         &          No         &         Yes         &          No         \\
 Observations        &      14,133         &      14,133         &      14,133         &       2,046         &       2,046         &       2,046         &      16,164         \\
 \hline\hline
+\multicolumn{8}{l}{\footnotesize NH: non-highest offer, H: highest offer}\\
 \end{tabular}
 }
