Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,91 @@
 
+@article{ye_indicative_2007,
+	title = {Indicative bidding and a theory of two-stage auctions},
+	volume = {58},
+	issn = {0899-8256},
+	url = {https://www.sciencedirect.com/science/article/pii/S089982560500165X},
+	doi = {10.1016/j.geb.2005.12.004},
+	abstract = {Motivated by the practice of indicative bidding, which is commonly used in sales of complex and valuable assets, this paper develops a theory of two-stage auctions based on the assumption that learning valuation is costly. In various cases that characterize what can be learned in the due diligence stage, we show that no symmetric increasing equilibrium exists and hence efficient entry cannot be guaranteed under the current design of indicative bidding. However, by introducing auctions of entry rights with binding first-round bids, we show that efficient entry can be induced under certain conditions. We also show that optimal auctions are typically characterized by a limited number of final bidders, which justifies the general practice of conducting two-stage auctions in environments with costly entry.},
+	number = {1},
+	urldate = {2025-10-24},
+	journal = {Games and Economic Behavior},
+	author = {Ye, Lixin},
+	month = jan,
+	year = {2007},
+	keywords = {Auctions, Efficient entry, Indicative bidding, Two-stage auctions},
+	pages = {181--207},
+}
+
+@article{quint_theory_2018,
+	title = {A {Theory} of {Indicative} {Bidding}},
+	volume = {10},
+	issn = {1945-7669},
+	url = {https://www.jstor.org/stable/26528481},
+	abstract = {When selling a business by auction, sellers typically use indicative bids—nonbinding preliminary bids—to select a small number of bidders to conduct due diligence and submit binding offers. We show that if entry into the auction is costly, indicative bids can be informative: symmetric equilibrium exists in weakly increasing strategies, with bidders “pooling” over a finite number of bids. The equilibrium helps the seller select high value bidders with higher likelihood, although the highest value bidders are not always selected. When the number of potential bidders is large, revenue and total surplus are both higher than when entry is unrestricted.},
+	number = {2},
+	urldate = {2025-10-23},
+	journal = {American Economic Journal: Microeconomics},
+	author = {Quint, Daniel and Hendricks, Kenneth},
+	year = {2018},
+	note = {Publisher: American Economic Association},
+	pages = {118--151},
+}
+
+@article{ellison_search_2009,
+	title = {Search, {Obfuscation}, and {Price} {Elasticities} on the {Internet}},
+	volume = {77},
+	copyright = {© 2009 The Econometric Society},
+	issn = {1468-0262},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.3982/ECTA5708},
+	doi = {10.3982/ECTA5708},
+	abstract = {We examine the competition between a group of Internet retailers who operate in an environment where a price search engine plays a dominant role. We show that for some products in this environment, the easy price search makes demand tremendously price-sensitive. Retailers, though, engage in obfuscation—practices that frustrate consumer search or make it less damaging to firms—resulting in much less price sensitivity on some other products. We discuss several models of obfuscation and examine its effects on demand and markups empirically.},
+	language = {en},
+	number = {2},
+	urldate = {2025-10-23},
+	journal = {Econometrica},
+	author = {Ellison, Glenn and Ellison, Sara Fisher},
+	year = {2009},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.3982/ECTA5708},
+	keywords = {Internet, Search, add-on pricing, demand elasticities, frictionless commerce, loss leaders, obfuscation, retail, search engines},
+	pages = {427--452},
+}
+
+@article{cosconati_competing_nodate,
+	title = {Competing under {Information} {Heterogeneity}:  {Evidence} from {Auto} {Insurance}},
+	language = {en},
+	author = {Cosconati, Marco and Xin, Yi and Jin, Yizhou and Wu, Fan},
+}
+
+@article{noauthor_indicative_2007,
+	title = {Indicative bidding and a theory of two-stage auctions},
+	volume = {58},
+	issn = {0899-8256},
+	url = {https://www.sciencedirect.com/science/article/pii/S089982560500165X},
+	doi = {10.1016/j.geb.2005.12.004},
+	abstract = {Motivated by the practice of indicative bidding, which is commonly used in sales of complex and valuable assets, this paper develops a theory of two-s…},
+	language = {en-US},
+	number = {1},
+	urldate = {2025-10-20},
+	journal = {Games and Economic Behavior},
+	month = jan,
+	year = {2007},
+	note = {Publisher: Academic Press},
+	pages = {181--207},
+}
+
+@article{allende_centralizing_2022,
+	title = {Centralizing {Procurement}:   {The} {Roles} of {Scale}, {Selection}, and {Variety}},
+	language = {en},
+	author = {Allende, Claudia and Atal, Juan Pablo and Carril, Rodrigo},
+	year = {2022},
+}
+
+@article{allen_search_nodate,
+	title = {Search {Frictions} and {Market} {Power} in {Negotiated}-{Price} {Markets}},
+	language = {en},
+	author = {Allen, Jason and Clark, Robert and Houde, Jean-Fracois and Cussen, Presented Diego},
+}
+
 @techreport{illanes_retirement_2019,
 	address = {Cambridge, MA},
 	title = {Retirement {Policy} and {Annuity} {Market} {Equilibria}: {Evidence} from {Chile}},
